--- a/main-page.html
+++ b/main-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Sedona</title>
@@ -7,10 +7,12 @@
 <body>
 	<header class="main-header">
 		<nav class="main-navigation">
+			<a href="main-page.html" class="main-page-logo">
+				<img src="img/sedona-logo.png" alt="Логотип Седона">
+			</a>
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="gallery.html">Фото и видео</a></li>
-				<li><a href="main-page.html"><img src="img/sedona-logo.png" alt="Логотип Седона"></a></li>
 				<li><a href="map.html">Карта штата</a></li>
 				<li><a href="hotel.html">Гостиницы</a></li>
 			</ul>
@@ -19,10 +21,7 @@
 
 	<main class="container">
 		<section class="slider">
-			<h2>Welcome</h2>
-			<p>to the gorgeous</p>
-			<h1 class="main-title">Sedona</h1>
-			<p>"Because the Grand Canyon sucks!"</p>
+			<img src="img/welcome.svg" class="slider-img" alt="Welcome to the gorgeous">
 		</section>
 
 		<h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -115,10 +114,8 @@
 			</ul>
 		</div>
 		<div class="copyright">
-			<ul class="copyroght-list">
-				<li class="copyright-by">Website by</li>
-				<li class="copyright-img"><img src="img/htmlacademy.png" alt="HTML Academt"></li>
-			</ul>
+			<p class="copyright-by">Website by</p>
+			<a href="https://htmlacademy.ru/" class="copyright-img"><img src="img/htmlacademy.png" alt="HTML Academy"></a>
 		</div>
 	</footer>
 </body>
