--- a/main-page.html
+++ b/main-page.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a href="main-page.html" class="main-page-logo">
-				<img src="img/sedona-logo.png" alt="Логотип Седона">
+				<img src="img/sedona-logo.png" width="140" height="72" alt="Логотип Седона">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
@@ -21,7 +21,7 @@
 
 	<main class="container">
 		<section class="slider">
-			<img src="img/welcome.svg" class="slider-img" alt="Welcome to the gorgeous">
+			<img src="img/welcome1.jpg" width="1200" height="800" class="slider-img" alt="Welcome to the gorgeous">
 		</section>
 
 		<h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -107,15 +107,15 @@
 	<footer class="main-footer">
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
-			<ul class="social-list">
-				<li class="social-item"><a href="#">Твиттер</a></li>
-				<li class="social-item"><a href="#">Фейсбук</a></li>
-				<li class="social-item"><a href="#">Ютуб</a></li>
+			<ul class="social-list" style="background: #333;">
+				<li class="social-item"><a href="#"><img src="img/t.png" width="17" height="15" alt="Твиттер"></a></li>
+				<li class="social-item"><a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
+				<li class="social-item"><a href="#"><img src="img/youtube.png" width="20" height="16" alt="Ютуб"></a></li>
 			</ul>
 		</div>
 		<div class="copyright">
 			<p class="copyright-by">Website by</p>
-			<a href="https://htmlacademy.ru/" class="copyright-img"><img src="img/htmlacademy.png" alt="HTML Academy"></a>
+			<a href="https://htmlacademy.ru/" class="copyright-img"><img src="img/htmlacademy.png" width="115" height="41" alt="HTML Academy"></a>
 		</div>
 	</footer>
 </body>
