--- a/hotel.html
+++ b/hotel.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a href="main-page.html" class="main-page-logo">
-				<img src="img/sedona-logo.png" alt="Логотип Седона">
+				<img src="img/sedona-logo.png" width="140" height="72" alt="Логотип Седона">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
@@ -52,40 +52,55 @@
 				<li><a href="#">По типу</a></li>
 				<li><a href="#">По рейтингу</a></li>
 			</ul>
-			<a href="#">up</a>
-			<a href="#">down</a>
+			<a href="#"><img src="img/up.png" width="11" height="10" alt="up"></a>
+			<a href="#"><img src="img/down.png" width="11" height="10" alt="down"></a>
 		</section>
 
 		<section class="found-item">
-			<img src="img/amara.png" alt="amara resort and spa">
+			<img src="img/amara.jpg" alt="amara resort and spa">
 			<h2>Amara resort & spa</h2>
 			<p>гостиница</p>
 			<p>от 4000 Р.</p>
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
 			<div class="mark">
+				<ul class="mark-list">
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+				</ul>
 				<p>Рейтинг: 8.5</p>
 			</div>
 		</section>
 		<section class="found-item">
-			<img src="img/desert.png" alt="desert quail inn">
+			<img src="img/desert.jpg" alt="desert quail inn">
 			<h2>Desert quail inn</h2>
 			<p>Мотель</p>
 			<p>от 3000 Р.</p>
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
 			<div class="mark">
+				<ul class="mark-list">
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+				</ul>
 				<p>Рейтинг: 8.9</p>
 			</div>
 		</section>
 		<section class="found-item">
-			<img src="img/villas.png" alt="villas at poco diablo">
+			<img src="img/villas.jpg" alt="villas at poco diablo">
 			<h2>Villas at poco diablo</h2>
 			<p>Апартаменты</p>
 			<p>от 2000 Р.</p>
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
 			<div class="mark">
+				<ul class="mark-list">
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
+				</ul>
 				<p>Рейтинг: 9.2</p>
 			</div>
 		</section>
@@ -94,15 +109,15 @@
 	<footer class="main-footer">
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
-			<ul class="social-list">
-				<li class="social-item"><a href="#">Твиттер</a></li>
-				<li class="social-item"><a href="#">Фейсбук</a></li>
-				<li class="social-item"><a href="#">Ютуб</a></li>
+			<ul class="social-list" style="background: #333;">
+				<li class="social-item"><a href="#"><img src="img/t.png" width="17" height="15" alt="Твиттер"></a></li>
+				<li class="social-item"><a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
+				<li class="social-item"><a href="#"><img src="img/youtube.png" width="20" height="16" alt="Ютуб"></a></li>
 			</ul>
 		</div>
 		<div class="copyright">
 			<p class="copyright-by">Website by</p>
-			<a href="https://htmlacademy.ru/" class="copyright-img"><img src="img/htmlacademy.png" alt="HTML Academy"></a>
+			<a href="https://htmlacademy.ru/" class="copyright-img"><img src="img/htmlacademy.png" width="115" height="41" alt="HTML Academy"></a>
 		</div>
 	</footer>
 </body>
