--- a/hotel.html
+++ b/hotel.html
@@ -5,6 +5,9 @@
 	<title>Sedona</title>
 </head>
 <body>
+	<!--
+	------------------------ HEADER ------------------------
+	-->
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a href="main-page.html" class="main-page-logo">
@@ -18,32 +21,40 @@
 			</ul>
 		</nav>
 	</header>
-
+	<!--
+	------------------------ MAIN ------------------------
+	-->
 	<main class="container">
+		<!--
+		------------------------ ИНФРАСТРУКТУРА, ТИП ЖИЛЬЯ, СТОИМОСТЬ ------------------------
+		-->
 		<section class="selection">
-			<div class="selection-checkbox">
-				<ul class="selection-list-1">
-					<li>Инфраструктура:</li>
-					<li>Бассейн</li>
-					<li>Парковка</li>
-					<li>Wi-Fi</li>
-				</ul>
-				<ul class="selection-list-2">
-					<li>Тип жилья:</li>
-					<li>Гостиница</li>
-					<li>Мотель</li>
-					<li>Апартаменты</li>
-				</ul>
-			</div>
+			<form action="/echo" method="post" oninput="maxprice.value=pricecount.value">
+				<div class="selection-checkbox">
+					<ul class="selection-list-1">
+						<li>Инфраструктура:</li>
+						<li><label for="pool"><input type="checkbox" id="pool" name="pool">Бассейн</label></li>
+						<li><label for="parking"><input type="checkbox" id="parking" name="parking">Парковка</label></li>
+						<li><label for="wifi"><input type="checkbox" id="wifi" name="wifi">Wi-Fi</label></li>
+					</ul>
+					<ul class="selection-list-2">
+						<li>Тип жилья:</li>
+						<li><label for="hostel"><input type="checkbox" id="hostel" name="hostel">Гостиница</label></li>
+						<li><label for="motel"><input type="checkbox" id="motel" name="motel">Мотель</label></li>
+						<li><label for="apartments"><input type="checkbox" id="apartments" name="apartments">Апартаменты</label></li>
+					</ul>
+				</div>
 
-			<div class="price">
-				<p>Стоимость в стуки (Р):</p>
-				<span>от 0 до 3000</span>
-				<!-- Тут будет инпут -->
-				<a href="#" class="button">Показать</a>
-			</div>
+				<div class="price">
+					<p>Стоимость в стуки (Р):</p>
+					<span>от 0 до <output name="maxprice">3000</output></span>
+					<input type="range" name="pricecount" min="0" max="4000" step="1">
+					<input type="submit" class="button-show" value="Показать">
+					<!-- Тут будет инпут -->
+				</div>
+			</form>
 		</section>
-
+		
 		<section class="found">
 			<h2>Найдено: 3</h2>
 			<ul class="found-list">
@@ -55,7 +66,9 @@
 			<a href="#"><img src="img/up.png" width="11" height="10" alt="up"></a>
 			<a href="#"><img src="img/down.png" width="11" height="10" alt="down"></a>
 		</section>
-
+		<!--
+		------------------------ СПИСОК НАЙДЕНО ------------------------
+		-->
 		<section class="found-item">
 			<img src="img/amara.jpg" alt="amara resort and spa">
 			<h2>Amara resort & spa</h2>
@@ -105,7 +118,9 @@
 			</div>
 		</section>
 	</main>
-
+	<!--
+	------------------------ FOOTER ------------------------
+	-->
 	<footer class="main-footer">
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
