--- a/main-page.html
+++ b/main-page.html
@@ -5,6 +5,9 @@
 	<title>Sedona</title>
 </head>
 <body>
+	<!--
+	------------------------ HEADER ------------------------
+	-->
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a href="main-page.html" class="main-page-logo">
@@ -18,7 +21,9 @@
 			</ul>
 		</nav>
 	</header>
-
+	<!--
+	------------------------ MAIN ------------------------
+	-->
 	<main class="container">
 		<section class="slider">
 			<img src="img/welcome1.jpg" width="1200" height="800" class="slider-img" alt="Welcome to the gorgeous">
@@ -26,7 +31,9 @@
 
 		<h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
 		<p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
-
+		<!--
+		------------------------ НАСТОЯЩИЙ ГОРОДОК ------------------------
+		-->
 		<section class="real-city">
 			<div class="real-city-info">
 				<ul class="real-city-list">
@@ -61,7 +68,9 @@
 				</li>
 			</ul>
 		</section>
-
+		<!--
+		------------------------ МОСТ ДЬЯВОЛА ------------------------
+		-->
 		<section class="bridge">
 			<div class="bridge-img">
 				<img src="img/bridge.jpg" alt="Мост дьявола">
@@ -99,11 +108,26 @@
 
 		<h2>Заинтересовались?</h2>
 		<p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
-		<!-- Очень скоро здесь будет реализованы формы -->
-
+		<!--
+		------------------------ ФОРМА ПОИСКА ГОСТИНИЦЫ ------------------------
+		-->
+		<form action="/echo" method="post" class="search-hostel">
+			<h2>Поиск гостиницы в седоне</h2>
+			<label for="arrival">Дата заезда:</label>
+			<input type="date" id="arrival" name="arrival" value="2017-04-24"><br>
+			<label for="departure">Дата выезда:</label>
+			<input type="date" id="departure" name="departure" value="2017-07-04"><br>
+			<label for="adults">Взрослые:</label>
+			<input type="number" id="adults" name="adults" value="2" min="0" max="100">
+			<label for="children">Дети:</label>
+			<input type="number" id="children" name="children" value="0" min="0" max="100"><br>
+			<input type="submit" value="Найти" class="button-search">
+		</form>
 		<!--<section class="map"></section>-->
 	</main>
-
+	<!--
+	------------------------ FOOTER ------------------------
+	-->
 	<footer class="main-footer">
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
