--- a/hotel.html
+++ b/hotel.html
@@ -10,7 +10,7 @@
 	-->
 	<header class="main-header">
 		<nav class="main-navigation">
-			<a href="main-page.html" class="main-page-logo">
+			<a href="index.html" class="index-logo">
 				<img src="img/sedona-logo.png" width="140" height="72" alt="Логотип Седона">
 			</a>
 			<ul class="site-navigation">
