--- a/hotel.html
+++ b/hotel.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Sedona</title>
+	<title>Hotel</title>
 </head>
 <body>
 	<!--
@@ -11,13 +11,13 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a href="index.html" class="index-logo">
-				<img src="img/sedona-logo.png" width="140" height="72" alt="Логотип Седона">
+				<img src="img/sedona-logo.png">
 			</a>
 			<ul class="site-navigation">
-				<li><a href="info.html">Информация</a></li>
-				<li><a href="gallery.html">Фото и видео</a></li>
-				<li><a href="map.html">Карта штата</a></li>
-				<li><a href="hotel.html">Гостиницы</a></li>
+				<li><a href="#">Информация</a></li>
+				<li><a href="#">Фото и видео</a></li>
+				<li><a href="#">Карта штата</a></li>
+				<li><a href="#">Гостиницы</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -29,19 +29,19 @@
 		------------------------ ИНФРАСТРУКТУРА, ТИП ЖИЛЬЯ, СТОИМОСТЬ ------------------------
 		-->
 		<section class="selection">
-			<form action="/echo" method="post" oninput="maxprice.value=pricecount.value">
+			<form action="https://echo.htmlacademy.ru/" method="post" oninput="maxprice.value=pricecount.value">
 				<div class="selection-checkbox">
 					<ul class="selection-list-1">
 						<li>Инфраструктура:</li>
-						<li><label for="pool"><input type="checkbox" id="pool" name="pool">Бассейн</label></li>
-						<li><label for="parking"><input type="checkbox" id="parking" name="parking">Парковка</label></li>
-						<li><label for="wifi"><input type="checkbox" id="wifi" name="wifi">Wi-Fi</label></li>
+						<li><input type="checkbox" id="pool" name="pool"><label for="pool">Бассейн</label></li>
+						<li><input type="checkbox" id="parking" name="parking"><label for="parking">Парковка</label></li>
+						<li><input type="checkbox" id="wifi" name="wifi"><label for="wifi">Wi-Fi</label></li>
 					</ul>
 					<ul class="selection-list-2">
 						<li>Тип жилья:</li>
-						<li><label for="hostel"><input type="checkbox" id="hostel" name="hostel">Гостиница</label></li>
-						<li><label for="motel"><input type="checkbox" id="motel" name="motel">Мотель</label></li>
-						<li><label for="apartments"><input type="checkbox" id="apartments" name="apartments">Апартаменты</label></li>
+						<li><input type="checkbox" id="hostel" name="hostel"><label for="hostel">Гостиница</label></li>
+						<li><input type="checkbox" id="motel" name="motel"><label for="motel">Мотель</label></li>
+						<li><input type="checkbox" id="apartments" name="apartments"><label for="apartments">Апартаменты</label></li>
 					</ul>
 				</div>
 
@@ -50,7 +50,6 @@
 					<span>от 0 до <output name="maxprice">3000</output></span>
 					<input type="range" name="pricecount" min="0" max="4000" step="1">
 					<input type="submit" class="button-show" value="Показать">
-					<!-- Тут будет инпут -->
 				</div>
 			</form>
 		</section>
@@ -63,8 +62,8 @@
 				<li><a href="#">По типу</a></li>
 				<li><a href="#">По рейтингу</a></li>
 			</ul>
-			<a href="#"><img src="img/up.png" width="11" height="10" alt="up"></a>
-			<a href="#"><img src="img/down.png" width="11" height="10" alt="down"></a>
+			<a href="#"><object type="image/svg+xml" data="img/icon-up-dir.svg" width="11" height="10" alt="up"></object></a>
+			<a href="#"><object type="image/svg+xml" data="img/icon-down-dir.svg" width="11" height="10" alt="down"></object></a>
 		</section>
 		<!--
 		------------------------ СПИСОК НАЙДЕНО ------------------------
@@ -76,16 +75,15 @@
 			<p>от 4000 Р.</p>
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
-			<div class="mark">
-				<ul class="mark-list">
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-				</ul>
-				<p>Рейтинг: 8.5</p>
-			</div>
+			<ul class="mark-list">
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+			</ul>
+			<p>Рейтинг: 8.5</p>
 		</section>
+
 		<section class="found-item">
 			<img src="img/desert.jpg" alt="desert quail inn">
 			<h2>Desert quail inn</h2>
@@ -93,15 +91,14 @@
 			<p>от 3000 Р.</p>
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
-			<div class="mark">
-				<ul class="mark-list">
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-				</ul>
-				<p>Рейтинг: 8.9</p>
-			</div>
+			<ul class="mark-list">
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+			</ul>
+			<p>Рейтинг: 8.9</p>
 		</section>
+
 		<section class="found-item">
 			<img src="img/villas.jpg" alt="villas at poco diablo">
 			<h2>Villas at poco diablo</h2>
@@ -109,13 +106,11 @@
 			<p>от 2000 Р.</p>
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
-			<div class="mark">
-				<ul class="mark-list">
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-					<li><img src="img/star.png" width="18" height="17" alt="mark"></li>
-				</ul>
-				<p>Рейтинг: 9.2</p>
-			</div>
+			<ul class="mark-list">
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+			</ul>
+			<p>Рейтинг: 9.2</p>
 		</section>
 	</main>
 	<!--
@@ -125,14 +120,14 @@
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
 			<ul class="social-list" style="background: #333;">
-				<li class="social-item"><a href="#"><img src="img/t.png" width="17" height="15" alt="Твиттер"></a></li>
-				<li class="social-item"><a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
-				<li class="social-item"><a href="#"><img src="img/youtube.png" width="20" height="16" alt="Ютуб"></a></li>
+				<li class="social-item"><a href="#"><object type="image/svg+xml" data="img/t.svg" width="17" height="15" alt="Твиттер"></object></a></li>
+				<li class="social-item"><a href="#"><object type="image/svg+xml" data="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></object></a></li>
+				<li class="social-item"><a href="#"><object type="image/svg+xml" data="img/youtube.svg" width="20" height="16" alt="Ютуб"></object></a></li>
 			</ul>
 		</div>
 		<div class="copyright">
 			<p class="copyright-by">Website by</p>
-			<a href="https://htmlacademy.ru/" class="copyright-img"><img src="img/htmlacademy.png" width="115" height="41" alt="HTML Academy"></a>
+			<a href="https://htmlacademy.ru/" class="copyright-img"><object type="image/svg+xml" data="img/htmlacademy.svg" width="115" height="41" alt="HTML Academy"></object></a>
 		</div>
 	</footer>
 </body>
