--- a/hotel.html
+++ b/hotel.html
@@ -29,7 +29,7 @@
 		------------------------ ИНФРАСТРУКТУРА, ТИП ЖИЛЬЯ, СТОИМОСТЬ ------------------------
 		-->
 		<section class="selection">
-			<form action="https://echo.htmlacademy.ru/" method="post" oninput="maxprice.value=pricecount.value">
+			<form action="https://echo.htmlacademy.ru/" method="post">
 				<div class="selection-checkbox">
 					<ul class="selection-list-1">
 						<li>Инфраструктура:</li>
@@ -47,9 +47,9 @@
 
 				<div class="price">
 					<p>Стоимость в стуки (Р):</p>
-					<span>от 0 до <output name="maxprice">3000</output></span>
-					<input type="range" name="pricecount" min="0" max="4000" step="1">
-					<input type="submit" class="button-show" value="Показать">
+					<span>от 0 до 3000</span>
+					<span>Ползунок</span>
+					<a href="#" class="button-show">Показать</a>
 				</div>
 			</form>
 		</section>
@@ -62,8 +62,8 @@
 				<li><a href="#">По типу</a></li>
 				<li><a href="#">По рейтингу</a></li>
 			</ul>
-			<a href="#"><object type="image/svg+xml" data="img/icon-up-dir.svg" width="11" height="10" alt="up"></object></a>
-			<a href="#"><object type="image/svg+xml" data="img/icon-down-dir.svg" width="11" height="10" alt="down"></object></a>
+			<a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="up"></a>
+			<a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="down"></a>
 		</section>
 		<!--
 		------------------------ СПИСОК НАЙДЕНО ------------------------
@@ -76,10 +76,10 @@
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
 			<ul class="mark-list">
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 			</ul>
 			<p>Рейтинг: 8.5</p>
 		</section>
@@ -92,9 +92,9 @@
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
 			<ul class="mark-list">
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 			</ul>
 			<p>Рейтинг: 8.9</p>
 		</section>
@@ -107,8 +107,8 @@
 			<a href="#" class="button-more">Подробнее</a>
 			<a href="#" class="button-booking">Забронировать</a>
 			<ul class="mark-list">
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
-				<li><object type="image/svg+xml" data="img/star.svg" width="18" height="17" alt="mark"></object></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 			</ul>
 			<p>Рейтинг: 9.2</p>
 		</section>
@@ -120,14 +120,14 @@
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
 			<ul class="social-list" style="background: #333;">
-				<li class="social-item"><a href="#"><object type="image/svg+xml" data="img/t.svg" width="17" height="15" alt="Твиттер"></object></a></li>
-				<li class="social-item"><a href="#"><object type="image/svg+xml" data="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></object></a></li>
-				<li class="social-item"><a href="#"><object type="image/svg+xml" data="img/youtube.svg" width="20" height="16" alt="Ютуб"></object></a></li>
+				<li class="social-item"><a href="#"><img src="img/t.svg" width="17" height="15" alt="Твиттер"></a></li>
+				<li class="social-item"><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+				<li class="social-item"><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
 			</ul>
 		</div>
 		<div class="copyright">
 			<p class="copyright-by">Website by</p>
-			<a href="https://htmlacademy.ru/" class="copyright-img"><object type="image/svg+xml" data="img/htmlacademy.svg" width="115" height="41" alt="HTML Academy"></object></a>
+			<a href="https://htmlacademy.ru/" class="copyright-img"><img src="img/htmlacademy.svg" width="115" height="41" alt="HTML Academy"></a>
 		</div>
 	</footer>
 </body>
