--- a/index.html
+++ b/index.html
@@ -109,6 +109,20 @@
 		<h2>Заинтересовались?</h2>
 		<p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
 		<a href="form.html"><h2>Поиск гостиницы в седоне</h2></a>
+		<!--
+		------------------------ ФОРМА ПОИСКА ГОСТИНИЦЫ ------------------------
+		-->
+		<form action="https://echo.htmlacademy.ru/" method="post" class="visually-hidden search-hostel">
+			<label for="arrival">Дата заезда:</label>
+			<input type="date" id="arrival" name="arrival" value="2017-04-24"><br>
+			<label for="departure">Дата выезда:</label>
+			<input type="date" id="departure" name="departure" value="2017-07-04"><br>
+			<label for="adults">Взрослые:</label>
+			<input type="number" id="adults" name="adults" value="2" min="0" max="100">
+			<label for="children">Дети:</label>
+			<input type="number" id="children" name="children" value="0" min="0" max="100"><br>
+			<input type="submit" value="Найти" class="button-search">
+		</form>	
 		<!--<section class="map"></section>-->
 	</main>
 	<!--
