--- a/hotel.html
+++ b/hotel.html
@@ -30,26 +30,27 @@
 		-->
 		<section class="selection">
 			<form action="https://echo.htmlacademy.ru/" method="post">
-				<div class="selection-checkbox">
+				<fieldset>
+					<legend>Инфраструктура:</legend>
 					<ul class="selection-list-1">
-						<li>Инфраструктура:</li>
-						<li><input type="checkbox" id="pool" name="pool"><label for="pool">Бассейн</label></li>
+						<li><input type="checkbox" id="pool" name="pool" checked><label for="pool">Бассейн</label></li>
 						<li><input type="checkbox" id="parking" name="parking"><label for="parking">Парковка</label></li>
 						<li><input type="checkbox" id="wifi" name="wifi"><label for="wifi">Wi-Fi</label></li>
 					</ul>
+				</fieldset>
+				<fieldset>
+					<legend>Тип жилья:</legend>
 					<ul class="selection-list-2">
-						<li>Тип жилья:</li>
-						<li><input type="checkbox" id="hostel" name="hostel"><label for="hostel">Гостиница</label></li>
-						<li><input type="checkbox" id="motel" name="motel"><label for="motel">Мотель</label></li>
-						<li><input type="checkbox" id="apartments" name="apartments"><label for="apartments">Апартаменты</label></li>
+						<li><input type="checkbox" id="hostel" name="hostel" checked><label for="hostel">Гостиница</label></li>
+						<li><input type="checkbox" id="motel" name="motel" checked><label for="motel">Мотель</label></li>
+						<li><input type="checkbox" id="apartments" name="apartments" checked><label for="apartments">Апартаменты</label></li>
 					</ul>
-				</div>
-
+				</fieldset>
 				<div class="price">
 					<p>Стоимость в стуки (Р):</p>
 					<span>от 0 до 3000</span>
 					<span>Ползунок</span>
-					<a href="#" class="button-show">Показать</a>
+					<button type="submit" class="button-show">Показать</button>
 				</div>
 			</form>
 		</section>
