--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<input type="number" id="adults" name="adults" value="2" min="0" max="100">
 			<label for="children">Дети:</label>
 			<input type="number" id="children" name="children" value="0" min="0" max="100"><br>
-			<input type="submit" value="Найти" class="button-search">
+			<button type="submit" class="button-search">Найти</button>
 		</form>	
 		<!--<section class="map"></section>-->
 	</main>
