--- a/hotel.html
+++ b/hotel.html
@@ -5,13 +5,11 @@
 	<title>Hotel</title>
 </head>
 <body>
-	<!--
-	------------------------ HEADER ------------------------
-	-->
+	<!---------------------- HEADER -----------------------	-->
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a href="index.html" class="index-logo">
-				<img src="img/sedona-logo.png">
+				<img src="img/sedona-logo.png" alt="Логотип Седона">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="#">Информация</a></li>
@@ -21,13 +19,9 @@
 			</ul>
 		</nav>
 	</header>
-	<!--
-	------------------------ MAIN ------------------------
-	-->
+	<!-------------------------- MAIN -------------------------->
 	<main class="container">
-		<!--
-		------------------------ ИНФРАСТРУКТУРА, ТИП ЖИЛЬЯ, СТОИМОСТЬ ------------------------
-		-->
+		<!-------------------------- ИНФРАСТРУКТУРА, ТИП ЖИЛЬЯ, СТОИМОСТЬ -------------------------->
 		<section class="selection">
 			<form action="https://echo.htmlacademy.ru/" method="post">
 				<fieldset>
@@ -66,9 +60,7 @@
 			<a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="up"></a>
 			<a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="down"></a>
 		</section>
-		<!--
-		------------------------ СПИСОК НАЙДЕНО ------------------------
-		-->
+		<!-------------------------- СПИСОК НАЙДЕНО -------------------------->
 		<section class="found-item">
 			<img src="img/amara.jpg" alt="amara resort and spa">
 			<h2>Amara resort & spa</h2>
@@ -114,9 +106,7 @@
 			<p>Рейтинг: 9.2</p>
 		</section>
 	</main>
-	<!--
-	------------------------ FOOTER ------------------------
-	-->
+	<!-------------------------- FOOTER -------------------------->
 	<footer class="main-footer">
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
