--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
 	<title>Sedona</title>
 </head>
 <body>
-	<!--
-	------------------------ HEADER ------------------------
-	-->
+	<!-------------------------- HEADER -------------------------->
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="index-logo">
-				<img src="img/sedona-logo.png">
+				<img src="img/sedona-logo.png" alt="Логотип Седона">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="#">Информация</a></li>
@@ -21,9 +19,7 @@
 			</ul>
 		</nav>
 	</header>
-	<!--
-	------------------------ MAIN ------------------------
-	-->
+	<!-------------------------- MAIN -------------------------->
 	<main class="container">
 		<section class="slider">
 			<img src="img/welcome1.jpg" width="1200" height="800" class="slider-img" alt="Welcome to the gorgeous">
@@ -31,9 +27,7 @@
 
 		<h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
 		<p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
-		<!--
-		------------------------ НАСТОЯЩИЙ ГОРОДОК ------------------------
-		-->
+		<!-------------------------- НАСТОЯЩИЙ ГОРОДОК -------------------------->
 		<section class="real-city">
 			<div class="real-city-info">
 				<ul class="real-city-list">
@@ -68,9 +62,7 @@
 				</li>
 			</ul>
 		</section>
-		<!--
-		------------------------ МОСТ ДЬЯВОЛА ------------------------
-		-->
+		<!-------------------------- МОСТ ДЬЯВОЛА -------------------------->
 		<section class="bridge">
 			<div class="bridge-img">
 				<img src="img/bridge.jpg" alt="Мост дьявола">
@@ -109,14 +101,12 @@
 		<h2>Заинтересовались?</h2>
 		<p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
 		<a href="form.html"><h2>Поиск гостиницы в седоне</h2></a>
-		<!--
-		------------------------ ФОРМА ПОИСКА ГОСТИНИЦЫ ------------------------
-		-->
+		<!-------------------------- ФОРМА ПОИСКА ГОСТИНИЦЫ -------------------------->
 		<form action="https://echo.htmlacademy.ru/" method="post" class="visually-hidden search-hostel">
 			<label for="arrival">Дата заезда:</label>
-			<input type="date" id="arrival" name="arrival" value="2017-04-24"><br>
+			<input type="text" id="arrival" name="arrival" value="24 апреля 2017"><br>
 			<label for="departure">Дата выезда:</label>
-			<input type="date" id="departure" name="departure" value="2017-07-04"><br>
+			<input type="text" id="departure" name="departure" value="4 июля 2017"><br>
 			<label for="adults">Взрослые:</label>
 			<input type="number" id="adults" name="adults" value="2" min="0" max="100">
 			<label for="children">Дети:</label>
@@ -125,9 +115,7 @@
 		</form>	
 		<!--<section class="map"></section>-->
 	</main>
-	<!--
-	------------------------ FOOTER ------------------------
-	-->
+	<!-------------------------- FOOTER -------------------------->
 	<footer class="main-footer">
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
