--- a/hotel.html
+++ b/hotel.html
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hotel</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<!---------------------- HEADER -----------------------	-->
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a href="index.html" class="index-logo">
-				<img src="img/sedona-logo.png" alt="Логотип Седона">
+				<img src="img/sedona-logo.svg" alt="Логотип Седона">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="#">Информация</a></li>
@@ -53,7 +56,7 @@
 			<h2>Найдено: 3</h2>
 			<ul class="found-list">
 				<li>Сортировка:</li>
-				<li><a href="#">По цене</a></li>
+				<li><a href="#" class="current-item">По цене</a></li>
 				<li><a href="#">По типу</a></li>
 				<li><a href="#">По рейтингу</a></li>
 			</ul>
@@ -74,7 +77,7 @@
 				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 			</ul>
-			<p>Рейтинг: 8.5</p>
+			<p class="mark">Рейтинг: 8.5</p>
 		</section>
 
 		<section class="found-item">
@@ -89,7 +92,7 @@
 				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 			</ul>
-			<p>Рейтинг: 8.9</p>
+			<p class="mark">Рейтинг: 8.9</p>
 		</section>
 
 		<section class="found-item">
@@ -103,14 +106,14 @@
 				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 			</ul>
-			<p>Рейтинг: 9.2</p>
+			<p class="mark">Рейтинг: 9.2</p>
 		</section>
 	</main>
 	<!-------------------------- FOOTER -------------------------->
 	<footer class="main-footer">
 		<h2 class="visitsedona">#Visitsedona</h2>
 		<div class="social">
-			<ul class="social-list" style="background: #333;">
+			<ul class="social-list">
 				<li class="social-item"><a href="#"><img src="img/t.svg" width="17" height="15" alt="Твиттер"></a></li>
 				<li class="social-item"><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
 				<li class="social-item"><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
