--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<ul class="site-navigation">
 				<li><a href="#">Информация</a></li>
 				<li><a href="#">Фото и видео</a></li>
+				<li></li>
 				<li><a href="#">Карта штата</a></li>
 				<li><a href="hotel.html">Гостиницы</a></li>
 			</ul>
@@ -37,33 +38,33 @@
 			<div class="real-city-info">
 				<ul class="real-city-list">
 					<li class="real-city-item">
-						<h2>Настоящий городок</h2>
-						<p>-№1-</p>
-						<p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+						<h2>Настоящий<br> городок</h2>
+						<p class="number">-№1-</p>
+						<p>Седона - не аттракцион для туристов,<br> там течёт своя жизнь</p>
 					</li>
 				</ul>
 			</div>
 			<div class="real-city-img">
-				<img src="img/real-city.jpg" alt="Настоящий городок">
+				<img src="img/city.jpg" width="800" height="256" alt="Настоящий городок">
 			</div>
 		</section>
 
 		<section class="features">
 			<ul class="features-list">
 				<li class="features-item">
-					<img src="img/home.jpg" alt="Жильё">
+					<img src="img/house.svg" alt="Жильё">
 					<h2>Жильё</h2>
-					<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+					<p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
 				</li>
 				<li class="features-item">
-					<img src="img/food.jpg" alt="Еда">
+					<img src="img/food.svg" alt="Еда">
 					<h2>Еда</h2>
-					<p>Всегда заказывайте фирменный бургер, вы не разочеруетесь!</p>
+					<p>Всегда заказывайте фирменный бургер,<br> вы не разочеруетесь!</p>
 				</li>
 				<li class="features-item">
-					<img src="img/present.jpg" alt="Сувениры">
+					<img src="img/presents.svg" alt="Сувениры">
 					<h2>Сувениры</h2>
-					<p>Не только китайского, но и местного производства!</p>
+					<p>Не только китайского, но и местного<br> производства!</p>
 				</li>
 			</ul>
 		</section>
@@ -75,9 +76,9 @@
 			<div class="bridge-info">
 				<ul class="bridge-list">
 					<li class="bridge-item">
-						<h2>Там есть мост дьявола</h2>
-						<p>-№2-</p>
-						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+						<h2>Там есть<br> мост дьявола</h2>
+						<p class="number">-№2-</p>
+						<p>Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
 					</li>
 				</ul>
 			</div>
@@ -86,19 +87,19 @@
 		<section class="mini-info">
 			<ul class="mini-info-list">
 				<li class="mini-info-item">
-					<h2>Небольшая площадь</h2>
-					<p>-№3-</p>
-					<p>Все достопримечательности находятся очень близко</p>
+					<h2>Небольшая<br> площадь</h2>
+					<p class="number">-№3-</p>
+					<p>Все достопримечательности<br> находятся очень близко</p>
 				</li>
 				<li class="mini-info-item">
-					<h2>Красивая дорога</h2>
-					<p>-№4-</p>
-					<p>Ехать в седону из лас-вегаса совсем не скучно!</p>
+					<h2>Красивая<br> дорога</h2>
+					<p class="number">-№4-</p>
+					<p>Ехать в седону из лас-вегаса совсем<br> не скучно!</p>
 				</li>
 				<li class="mini-info-item">
-					<h2>Мало туристов</h2>
-					<p>-№5-</p>
-					<p>Большинство едет в гранд канбон и толпится там</p>
+					<h2>Мало<br> туристов</h2>
+					<p class="number">-№5-</p>
+					<p>Большинство едет в гранд канбон<br> и толпится там</p>
 				</li>
 			</ul>
 		</section>
