--- a/hotel.html
+++ b/hotel.html
@@ -17,6 +17,7 @@
 			<ul class="site-navigation">
 				<li><a href="#">Информация</a></li>
 				<li><a href="#">Фото и видео</a></li>
+				<li></li>
 				<li><a href="#">Карта штата</a></li>
 				<li><a href="#">Гостиницы</a></li>
 			</ul>
@@ -26,27 +27,32 @@
 	<main class="container">
 		<!-------------------------- ИНФРАСТРУКТУРА, ТИП ЖИЛЬЯ, СТОИМОСТЬ -------------------------->
 		<section class="selection">
-			<form action="https://echo.htmlacademy.ru/" method="post">
-				<fieldset>
-					<legend>Инфраструктура:</legend>
-					<ul class="selection-list-1">
-						<li><input type="checkbox" id="pool" name="pool" checked><label for="pool">Бассейн</label></li>
-						<li><input type="checkbox" id="parking" name="parking"><label for="parking">Парковка</label></li>
-						<li><input type="checkbox" id="wifi" name="wifi"><label for="wifi">Wi-Fi</label></li>
-					</ul>
-				</fieldset>
-				<fieldset>
-					<legend>Тип жилья:</legend>
-					<ul class="selection-list-2">
-						<li><input type="checkbox" id="hostel" name="hostel" checked><label for="hostel">Гостиница</label></li>
-						<li><input type="checkbox" id="motel" name="motel" checked><label for="motel">Мотель</label></li>
-						<li><input type="checkbox" id="apartments" name="apartments" checked><label for="apartments">Апартаменты</label></li>
-					</ul>
-				</fieldset>
+			<form action="https://echo.htmlacademy.ru/" method="post" class="selection-form">
+				<div class="form-block">
+					<fieldset>
+						<legend>Инфраструктура:</legend>
+						<ul class="selection-list-1">
+							<li><input type="checkbox" id="pool" name="pool" checked><span></span><label for="pool">Бассейн</label></li>
+							<li><input type="checkbox" id="parking" name="parking"><label for="parking">Парковка</label></li>
+							<li><input type="checkbox" id="wifi" name="wifi"><label for="wifi">Wi-Fi</label></li>
+						</ul>
+					</fieldset>
+					<fieldset>
+						<legend>Тип жилья:</legend>
+						<ul class="selection-list-2">
+							<li><input type="checkbox" id="hostel" name="hostel" checked><label for="hostel">Гостиница</label></li>
+							<li><input type="checkbox" id="motel" name="motel" checked><label for="motel">Мотель</label></li>
+							<li><input type="checkbox" id="apartments" name="apartments" checked><label for="apartments">Апартаменты</label></li>
+						</ul>
+					</fieldset>
+				</div>
 				<div class="price">
 					<p>Стоимость в стуки (Р):</p>
-					<span>от 0 до 3000</span>
-					<span>Ползунок</span>
+					<span class="price-span">от 0 до 3000</span>
+					<span class="span-randge">ползунок
+						<div class="randge-1"></div>
+						<div class="randge-2"></div>
+					</span>
 					<button type="submit" class="button-show">Показать</button>
 				</div>
 			</form>
@@ -60,53 +66,73 @@
 				<li><a href="#">По типу</a></li>
 				<li><a href="#">По рейтингу</a></li>
 			</ul>
-			<a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="up"></a>
-			<a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="down"></a>
+			<div class="arrows">
+				<a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="up"></a>
+				<a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="down"></a>
+			</div>
 		</section>
 		<!-------------------------- СПИСОК НАЙДЕНО -------------------------->
 		<section class="found-item">
-			<img src="img/amara.jpg" alt="amara resort and spa">
-			<h2>Amara resort & spa</h2>
-			<p>гостиница</p>
-			<p>от 4000 Р.</p>
-			<a href="#" class="button-more">Подробнее</a>
-			<a href="#" class="button-booking">Забронировать</a>
-			<ul class="mark-list">
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-			</ul>
-			<p class="mark">Рейтинг: 8.5</p>
+			<img src="img/amara.jpg" width="135" height="90" alt="amara resort and spa">
+			<div class="found-item-info">
+				<h2>Amara resort & spa</h2>
+				<div>
+					<p>гостиница</p>
+					<p>от 4000 Р.</p>	
+				</div>
+				<a href="#" class="button-more">Подробнее</a>
+				<a href="#" class="button-booking">Забронировать</a>	
+			</div>
+			<div class="mark-div">
+				<ul class="mark-list">
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				</ul>
+				<p class="mark">Рейтинг: 8.5</p>
+			</div>
 		</section>
 
 		<section class="found-item">
-			<img src="img/desert.jpg" alt="desert quail inn">
-			<h2>Desert quail inn</h2>
-			<p>Мотель</p>
-			<p>от 3000 Р.</p>
-			<a href="#" class="button-more">Подробнее</a>
-			<a href="#" class="button-booking">Забронировать</a>
-			<ul class="mark-list">
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-			</ul>
-			<p class="mark">Рейтинг: 8.9</p>
+			<img src="img/desert.jpg"  width="135" height="90" alt="desert quail inn">
+			<div class="found-item-info">
+				<h2>Desert quail inn</h2>
+				<div>
+					<p>Мотель</p>
+					<p>от 3000 Р.</p>
+				</div>
+				<a href="#" class="button-more">Подробнее</a>
+				<a href="#" class="button-booking">Забронировать</a>
+			</div>
+			<div class="mark-div">
+				<ul class="mark-list">
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				</ul>
+				<p class="mark">Рейтинг: 8.9</p>
+			</div>
 		</section>
 
 		<section class="found-item">
-			<img src="img/villas.jpg" alt="villas at poco diablo">
-			<h2>Villas at poco diablo</h2>
-			<p>Апартаменты</p>
-			<p>от 2000 Р.</p>
-			<a href="#" class="button-more">Подробнее</a>
-			<a href="#" class="button-booking">Забронировать</a>
-			<ul class="mark-list">
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-				<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
-			</ul>
-			<p class="mark">Рейтинг: 9.2</p>
+			<img src="img/villas.jpg"  width="135" height="90" alt="villas at poco diablo">
+			<div class="found-item-info">
+				<h2>Villas at poco diablo</h2>
+				<div>
+					<p>Апартаменты</p>
+					<p>от 2000 Р.</p>
+				</div>
+				<a href="#" class="button-more">Подробнее</a>
+				<a href="#" class="button-booking">Забронировать</a>
+			</div>
+			<div class="mark-div">
+				<ul class="mark-list">
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
+				</ul>
+				<p class="mark">Рейтинг: 9.2</p>
+			</div>	
 		</section>
 	</main>
 	<!-------------------------- FOOTER -------------------------->
