--- a/index.html
+++ b/index.html
@@ -109,14 +109,24 @@
 		<a href="form.html"><h2>Поиск гостиницы в седоне</h2></a>
 		<!-------------------------- ФОРМА ПОИСКА ГОСТИНИЦЫ -------------------------->
 		<form action="https://echo.htmlacademy.ru/" method="post" class="visually-hidden search-hostel">
-			<label for="arrival">Дата заезда:</label>
-			<input type="text" id="arrival" name="arrival" value="24 апреля 2017"><br>
-			<label for="departure">Дата выезда:</label>
-			<input type="text" id="departure" name="departure" value="4 июля 2017"><br>
-			<label for="adults">Взрослые:</label>
-			<input type="number" id="adults" name="adults" value="2" min="0" max="100">
-			<label for="children">Дети:</label>
-			<input type="number" id="children" name="children" value="0" min="0" max="100"><br>
+			<div class="arrival">
+				<label for="arrival">Дата заезда:</label>
+				<input type="text" id="arrival" name="arrival" value="24 апреля 2017">
+			</div>
+			<div class="departure">
+				<label for="departure">Дата выезда:</label>
+				<input type="text" id="departure" name="departure" value="4 июля 2017">
+			</div>
+			<div class="adults-children">
+				<div class="adults">
+					<label for="adults">Взрослые:</label>
+					<input type="number" id="adults" name="adults" value="2" min="0" max="100">		
+				</div>
+				<div class="children">
+					<label for="children">Дети:</label>
+					<input type="number" id="children" name="children" value="0" min="0" max="100">	
+				</div>
+			</div>
 			<button type="submit" class="button-search">Найти</button>
 		</form>	
 		<section class="map"><img src="img/map.jpg" width="1200" height="595" alt="Карта гостиницы в седоне"></section>
