minus and plus svg

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<label for="adults">Взрослые:</label>
 					<div class="adults-input">
 						<div class="minus"></div>
-						<input type="text" id="adults" name="adults" value="2" min="0" max="100">		
+						<input type="text" id="adults" name="adults" value="2" min="0" max="100" class="inputAdults">		
 						<div class="plus"></div>	
 					</div>
 				</div>
@@ -151,7 +151,7 @@
 					<label for="children">Дети:</label>
 					<div class="children-input">
 						<div class="minus"></div>
-						<input type="text" id="children" name="children" value="0" min="0" max="100">	
+						<input type="text" id="children" name="children" value="10" min="0" max="100" class="inputChildren">	
 						<div class="plus"></div>	
 					</div>
 				</div>
