--- a/hotel.html
+++ b/hotel.html
@@ -26,8 +26,7 @@
 	<!-------------------------- MAIN --------------------------->
 	<main class="container">
 		<!-------------------------- ИНФРАСТРУКТУРА, ТИП ЖИЛЬЯ, СТОИМОСТЬ -------------------------->
-		<section class="selection">
-			
+		<section class="selection">	
 			<form action="https://echo.htmlacademy.ru/" method="post" class="selection-form">
 				<div class="form-block">
 					<fieldset>
@@ -124,8 +123,6 @@
 				<li><a href="#">По рейтингу</a></li>
 			</ul>
 			<div class="arrows">
-				<!--<a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="up"></a>
-				<a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="down"></a>-->
 				<a href="#" title="по возрастанию"></a>
 				<a href="#" title="по убыванию"></a>
 			</div>
@@ -149,7 +146,7 @@
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				</ul>
-				<p class="mark">Рейтинг: 8.5</p>
+				<p class="mark" aria-label="Рейтинг 8.5">Рейтинг: 8.5</p>
 			</div>
 		</section>
 
@@ -170,7 +167,7 @@
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				</ul>
-				<p class="mark">Рейтинг: 8.9</p>
+				<p class="mark" aria-label="Рейтинг 8.9">Рейтинг: 8.9</p>
 			</div>
 		</section>
 
@@ -190,7 +187,7 @@
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 					<li><img src="img/star.svg" width="18" height="17" alt="mark"></li>
 				</ul>
-				<p class="mark">Рейтинг: 9.2</p>
+				<p class="mark" aria-label="Рейтинг 9.2">Рейтинг: 9.2</p>
 			</div>	
 		</section>
 	</main>
@@ -200,19 +197,16 @@
 		<div class="social">
 			<ul class="social-list">
 				<li class="social-item"><a href="#">
-					<!--<img src="img/t.svg" width="17" height="15" alt="Твиттер">-->
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
 						<path id="twitter-svg" fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/>
 					</svg>
 				</a></li>
 				<li class="social-item"><a href="#">
-					<!--<img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук">-->
 					<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
 						<path id="fb-svg" fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
 					</svg>
 				</a></li>
 				<li class="social-item"><a href="#">
-					<!--<img src="img/youtube.svg" width="20" height="16" alt="Ютуб">-->
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
 						<path id="youtube-svg" fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/>
 					</svg>
@@ -222,7 +216,6 @@
 		<div class="copyright">
 			<p class="copyright-by">Website by</p>
 			<a href="https://htmlacademy.ru/" class="copyright-img">
-				<!--<img src="img/htmlacademy.svg" width="115" height="41" alt="HTML Academy">-->
 				<svg id="Layer_1" 
 				data-name="Layer 1" 
 				xmlns="http://www.w3.org/2000/svg" 
